--- a/styles/style.scss
+++ b/styles/style.scss
@@ -91,37 +91,38 @@ body,
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
 
-.styled-table thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-}
+    thead tr {
+        background-color: #009879;
+        color: #ffffff;
+        text-align: left;
+    }
 
-.styled-table th,
-.styled-table td {
-    padding: 12px 15px;
-}
+    th,
+    td {
+        padding: 12px 15px;
+    }
 
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-    background-color: #dddddd;
-}
+    tbody {
+        tr {
+            border-bottom: 1px solid #dddddd;
+            background-color: #dddddd;
+        }
 
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
+        tr:nth-of-type(even) {
+            background-color: #f3f3f3;
+        }
 
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
+        tr:last-of-type {
+            border-bottom: 2px solid #009879;
+        }
 
-.styled-table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
+        tr.active-row {
+            font-weight: bold;
+            color: #009879;
+        }
+    }
 }
-
 
 @media only screen and (max-width: 600px) {
     .search {
