--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,14 +22,14 @@ body,
     flex-direction: column;
 }
 
-.search {
-    outline: none;
-    padding: 20px 7%;
-    border-radius: 20px;
-    border: none;
-    margin-bottom: 5%;
-    background: rgba(250, 250, 250, 0.85);
-}
+// .search {
+    //     outline: none;
+    //     padding: 20px 7%;
+    //     border-radius: 20px;
+    //     border: none;
+    //     margin-bottom: 5%;
+    //     background: rgba(250, 250, 250, 0.85);
+    // }
 
 // .city {
 //     display: flex;
