--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,9 +9,10 @@ body,
 }
 
 .main-container {
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)), url('https://hdwallpaper20.com/wp-content/uploads/2017/07/wallpaper-wp4001752.jpg');
-    background-size: cover;
-    background-position: center;
+    // background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)), url('https://hdwallpaper20.com/wp-content/uploads/2017/07/wallpaper-wp4001752.jpg');
+    // background-size: cover;
+    // background-position: center;
+    background-color: #000;
 }
 
 .main-container {
@@ -23,13 +24,13 @@ body,
 }
 
 // .search {
-    //     outline: none;
-    //     padding: 20px 7%;
-    //     border-radius: 20px;
-    //     border: none;
-    //     margin-bottom: 5%;
-    //     background: rgba(250, 250, 250, 0.85);
-    // }
+//     outline: none;
+//     padding: 20px 7%;
+//     border-radius: 20px;
+//     border: none;
+//     margin-bottom: 5%;
+//     background: rgba(250, 250, 250, 0.85);
+// }
 
 // .city {
 //     display: flex;
@@ -87,9 +88,10 @@ body,
 .styled-table {
     border-collapse: collapse;
     margin: 25px 0;
-    font-size: 0.9em;
+    font-size: 1.2em;
     font-family: sans-serif;
-    min-width: 400px;
+    // min-width: 400px;
+    width: 50%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 
     thead tr {
@@ -124,9 +126,11 @@ body,
     }
 }
 
-@media only screen and (max-width: 600px) {
-    .search {
+@media only screen {
+    .styled-table {
         padding: 20px 15%;
+        width: 85%;
+        max-width: 800px;
     }
 
     .city {
