--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,5 @@
+$primary-red:#e7c2c2;
+
 html,
 body,
 #root {
@@ -108,16 +110,25 @@ body,
     tbody {
         tr {
             border-bottom: 1px solid #dddddd;
-            background-color: #dddddd;
-        }
-
-        tr:nth-of-type(even) {
             background-color: #f3f3f3;
         }
+
+        // tr:nth-of-type(even) {
+        //     background-color: #f3f3f3;
+        // }
 
         tr:last-of-type {
             border-bottom: 2px solid #009879;
         }
+
+
+
+        #sunrise-forbidden-tr,
+        #noon-forbidden-tr,
+        #sunset-forbidden-tr {
+            background-color: $primary-red;
+        }
+
 
         tr.active-row {
             font-weight: bold;
