--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,10 +11,10 @@ body,
 }
 
 .main-container {
-    // background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)), url('https://hdwallpaper20.com/wp-content/uploads/2017/07/wallpaper-wp4001752.jpg');
-    // background-size: cover;
-    // background-position: center;
-    background-color: #000;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)), url(../images/bg.jpeg);
+    background-size: cover;
+    background-position: center;
+    // background-color: #000;
 }
 
 .main-container {
@@ -119,6 +119,8 @@ body,
 
         tr:last-of-type {
             border-bottom: 2px solid #009879;
+            border-top: 2px solid #009879;
+            text-align: center;
         }
 
 
