--- a/styles/style.scss
+++ b/styles/style.scss
@@ -120,7 +120,8 @@ body,
         tr:last-of-type {
             border-bottom: 2px solid #009879;
             border-top: 2px solid #009879;
-            text-align: center;
+            text-align: left;
+            font-size: 0.8em;
         }
 
 
