--- a/styles/style.scss
+++ b/styles/style.scss
@@ -159,3 +159,13 @@ body,
         padding: 40px 20%;
     }
 }
+
+#enableNotifications {
+    height: 80px;
+    width: 350px;
+    background-color: black;
+    color: white;
+    border: 1px;
+    border-radius: 500px;
+    font-size: 24px;
+}
