--- a/styles/style.scss
+++ b/styles/style.scss
@@ -108,11 +108,11 @@ body,
             padding: 2vh 15px;
         }
 
-        span {
+        #date-hijri {
             font-size: 1.1em;
         }
 
-        sub {
+        #date-english {
             font-size: 00.8em;
         }
     }
