--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,7 +3,7 @@ $primary-red:#e7c2c2;
 html,
 body,
 #root {
-    font: 0.9rem sans-serif;
+    font: 1rem sans-serif;
     background: #0a1f44;
     color: #1e2432;
     height: 100%;
@@ -89,7 +89,7 @@ body,
 
 .styled-table {
     border-collapse: collapse;
-    font-size: 1.2em;
+    // font-size: 1.2em;
     font-family: sans-serif;
     // min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -106,11 +106,11 @@ body,
         }
 
         #date-hijri {
-            font-size: 1.1em;
+            font-size: 1.1rem;
         }
 
         #date-english {
-            font-size: 00.8em;
+            font-size: 0.8rem;
         }
     }
 
@@ -120,6 +120,7 @@ body,
         tr {
             border-bottom: 1px solid #dddddd;
             background-color: #f3f3f3;
+            font-size: 1rem;
         }
 
         // tr:nth-of-type(even) {
@@ -134,7 +135,7 @@ body,
             border-bottom: 2px solid #009879;
             border-top: 2px solid #009879;
             text-align: left;
-            font-size: 0.8em;
+            font-size: 0.8rem;
         }
 
 
@@ -156,7 +157,7 @@ body,
 @media screen {
     .styled-table {
         // padding: 20px 7.5vw;
-        max-height: 85vh;
+        max-height: 90vh;
         // width: 85%;
         max-width: 85vw;
         overflow: auto;
@@ -165,15 +166,19 @@ body,
 
         thead {
 
-            th {
+            tr {
                 padding: 1.2vh 15px;
             }
         }
 
         tbody {
+            tr {
+                font-size: 00.9rem;
+            }
 
             td {
                 padding: 0.7vh 15px;
+
             }
         }
     }
@@ -194,9 +199,13 @@ body,
         }
 
         tbody {
+            tr {
+                font-size: 1rem;
+            }
 
             td {
                 padding: 1vh 15px;
+
             }
         }
     }
