--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,7 +106,7 @@ body,
         }
 
         #date-hijri {
-            font-size: 1.1rem;
+            font-size: 1.2rem;
         }
 
         #date-english {
@@ -135,7 +135,7 @@ body,
             border-bottom: 2px solid #009879;
             border-top: 2px solid #009879;
             text-align: left;
-            font-size: 0.8rem;
+            font-size: 0.7rem;
         }
 
 
@@ -195,7 +195,7 @@ body,
 
             th {
                 padding: 2vh 15px;
-                color: #0a1f44;
+                // color: #0a1f44;
             }
         }
 
@@ -205,7 +205,7 @@ body,
             }
 
             td {
-                padding: 0.9vh 15px;
+                padding: 0.8vh 15px;
             }
         }
     }
